# AWUS036AXM-Monitor

./: README.md  settings.gradle
app/: README.md  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  compat.h  mt7921_shim.cpp  mt7921_shim.h  native_bridge.cpp
app/src/main/java/com/example/wifimonitor/: DriverForegroundService.kt  FirmwareManager.kt  MainActivity.kt  NativeBridge.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: usb_device_filter.xml
